src/objects/Application_Question_Template__c.object
<CustomObject>
    <fields>
        <fullName>Application_Form_Section__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Application Form Section</label>
        <referenceTo>Application_Form_Section__c</referenceTo>
        <relationshipLabel>Application Question Templates</relationshipLabel>
        <relationshipName>Application_Question_Templates</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Application_Question__c</fullName>
        <label>Application Question</label>
        <referenceTo>Application_Question__c</referenceTo>
        <relationshipName>Question_Templates</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Application_Window_Template__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Application Window Template</label>
        <referenceTo>Application_Window_Template__c</referenceTo>
        <relationshipLabel>Application Question Templates</relationshipLabel>
        <relationshipName>Question_Templates</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Page__c</fullName>
        <formula>Application_Question__r.Page_Number_To_Display_On__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Page #</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Question__c</fullName>
        <formula>Application_Question__r.Question_Number__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Question #</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <label>Application Question Template</label>
    <nameField>
        <displayFormat>AQT-{00000}</displayFormat>
        <label>Application Question Template Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Application Question Templates</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>